# api/openapi/order.yaml
@@ -12,18 +12,18 @@ servers:
       hostname:
         default: 127.0.0.1
 paths:
-  /customer/{costumerID}/orders/{orderID}:
+  /customer/{customer_id}/orders/{order_id}:
     get:
       description: get order
       parameters:
         - in: path
-          name: costumerID
+          name: customer_id
           schema:
             type: string
           required: true
 
         - in: path
-          name: orderID
+          name: order_id
           schema:
             type: string
           required: true
@@ -43,12 +43,12 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /customer/{costumerID}/orders:
+  /customer/{customer_id}/orders:
     post:
       description: "create order"
       parameters:
         - in: path
-          name: costumerID
+          name: customer_id
           schema:
             type: string
           required: true
@@ -80,14 +80,14 @@ components:
       type: object
       required:
         - id
-        - customerID
+        - customer_id
         - status
         - items
-        - paymentLink
+        - payment_link
       properties:
         id:
           type: string
-        customerID:
+        customer_id:
           type: string
         status:
           type: string
@@ -95,7 +95,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/Item"
-        paymentLink:
+        payment_link:
           type: string
 
     Item:
@@ -104,7 +104,7 @@ components:
         - id
         - name
         - quantity
-        - priceID
+        - price_id
       properties:
         id:
           type: string
@@ -113,7 +113,7 @@ components:
           format: int32
         name:
           type: string
-        priceID:
+        price_id:
           type: string
 
     Error:
@@ -125,10 +125,10 @@ components:
     CreateOrderRequest:
       type: object
       required:
-        - customerID
+        - customer_id
         - items
       properties:
-        customerID:
+        customer_id:
           type: string
         items:
           type: array
