# internal/order/app/dto/order.go
@@ -1,0 +1,7 @@
+package dto
+
+type CreateOrderResponse struct {
+	CustomerID  string `json:"customer_id"`
+	OrderID     string `json:"order_id"`
+	RedirectURL string `json:"redirect_url"`
+}
