# internal/order/ports/openapi_types.gen.go
@@ -5,7 +5,7 @@ package ports
 
 // CreateOrderRequest defines model for CreateOrderRequest.
 type CreateOrderRequest struct {
-	CustomerID string             `json:"customerID"`
+	CustomerId string             `json:"customer_id"`
 	Items      []ItemWithQuantity `json:"items"`
 }
 
@@ -18,7 +18,7 @@ type Error struct {
 type Item struct {
 	Id       string `json:"id"`
 	Name     string `json:"name"`
-	PriceID  string `json:"priceID"`
+	PriceId  string `json:"price_id"`
 	Quantity int32  `json:"quantity"`
 }
 
@@ -30,12 +30,12 @@ type ItemWithQuantity struct {
 
 // Order defines model for Order.
 type Order struct {
-	CustomerID  string `json:"customerID"`
+	CustomerId  string `json:"customer_id"`
 	Id          string `json:"id"`
 	Items       []Item `json:"items"`
-	PaymentLink string `json:"paymentLink"`
+	PaymentLink string `json:"payment_link"`
 	Status      string `json:"status"`
 }
 
-// PostCustomerCostumerIDOrdersJSONRequestBody defines body for PostCustomerCostumerIDOrders for application/json ContentType.
-type PostCustomerCostumerIDOrdersJSONRequestBody = CreateOrderRequest
+// PostCustomerCustomerIdOrdersJSONRequestBody defines body for PostCustomerCustomerIdOrders for application/json ContentType.
+type PostCustomerCustomerIdOrdersJSONRequestBody = CreateOrderRequest
